--- a/page1/part3/assets/scss/utils/_common.scss
+++ b/page1/part3/assets/scss/utils/_common.scss
@@ -111,7 +111,6 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 
-
   .alert-container {
     width: 300px;
     height: 180px;
@@ -282,10 +281,11 @@ div.loading-animation {
 /* my-aside 動畫 */
 @keyframes asiderunning {
   0% {
-    bottom: 90%;
+    transform: translateY(20px);
   }
+ 
   100% {
-    bottom: 20%;
+    transform: translateY(60px);
   }
 }
 
