--- a/page1/part3/assets/scss/utils/_variables.scss
+++ b/page1/part3/assets/scss/utils/_variables.scss
@@ -1,6 +1,7 @@
 // variable
 // color
 $primary-blue: rgb(26, 216, 211);
+$second-blue: #1cb5e0;
 $second-gray: rgb(128, 128, 128);
 $gray-color: #ececec;
 
